// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastNameField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="last_name"
      >
        Nazwisko
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="Nazwisko"
          name="last_name"
          placeholder="Nazwisko"
          value="3232"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="testId"
  label="Nazwisko"
  name="last_name"
  placeholder="Nazwisko"
  value=""
/>
`;

exports[`<LastNameField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="last_name"
      >
        LastName*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<LastNameField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="last_name"
      >
        LastName
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="testId"
          label="LastName"
          name="last_name"
          placeholder="Nazwisko"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
